--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vic Chang - 個人履歷</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
   </head>
   <body>
     <div class="switch-bar">
@@ -22,11 +26,11 @@
       </p>
 
       <h2>技能</h2>
-      <ul>
-        <li>Python / Flask / Django</li>
-        <li>JavaScript / HTML / CSS</li>
-        <li>Git / GitHub</li>
-        <li>SQL / 資料處理</li>
+      <ul class="skills">
+        <li><i class="fab fa-python"></i> Python / Flask / Django</li>
+        <li><i class="fab fa-js-square"></i> JavaScript / HTML / CSS</li>
+        <li><i class="fab fa-git-alt"></i> Git / GitHub</li>
+        <li><i class="fas fa-database"></i> SQL / 資料處理</li>
       </ul>
 
       <h2>經歷 / 學歷</h2>
